fix: remove extra padding in docs

--- a/src/theme/DocItem/Layout/styles.module.css
+++ b/src/theme/DocItem/Layout/styles.module.css
@@ -1,10 +1,16 @@
-.docItemContainer header + *,
-.docItemContainer article > *:first-child {
+.docItemContainer header+*,
+.docItemContainer article>*:first-child {
   margin-top: 0;
 }
 
 @media (min-width: 997px) {
   .docItemCol {
     max-width: 75% !important;
+  }
+}
+
+@media (max-width: 996px) {
+  .col {
+    padding: 0;
   }
 }
